# weather_station

./: .gitignore  .server_node.c.swo  .server_node.c.swp  CMakeLists.txt  README.md  client_node.c  funkcje.txt  main.c  server_node.c
include/: client_node.c  client_node.h  global.h  opc_ua_client.c  opc_ua_server.c  server_node.c
include/opc_ua/: opc_ua_client.c  opc_ua_client.h  opc_ua_server.c  opc_ua_server.h
